Kubernetes/ReactClient/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  namespace: application
spec:
  replicas: 1
  selector:
     matchLabels:
       app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react-client
        image: yanamanhusheva/hotel-react-app:1.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
