Kubernetes/ReactClient/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: react-service
  namespace: application
spec:
  selector:
    app: react
  ports:
  - port: 80
